--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ nav ul li a {
   font-size: 16px;
 }
 
+
 /* Estilos para a seção features */
 .features {
   display: grid;
@@ -70,7 +71,9 @@ nav ul li a {
 .features h2 {
   font-size: 24px;
   margin-bottom: 10px;
+ 
 }
+
 
 .features p {
   font-size: 16px;
@@ -89,11 +92,12 @@ nav ul li a {
   background-color: #f9f9f9;
   padding: 20px;
   text-align: center;
+  justify-content: space-between;
 }
 
 .additional-content-item img {
-  width: 100%;
-  max-height: 200px;
+  width: 70%;
+  max-height: 300px;
   object-fit: cover;
   margin-bottom: 10px;
 }
@@ -133,3 +137,9 @@ footer {
 .footer-right ul li a {
   text-decoration: none;
 }
+
+.abelha {
+  height: 100%;
+  margin: 0;
+}
+
