--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ body {
   margin: 0;
 }
 
-
 nav ul {
   list-style-type: none;
   padding: 0;
@@ -54,11 +53,14 @@ nav ul li a {
   font-size: 16px;
 }
 
+.caixa {
+  max-width: 500px;
+}
 
 /* Estilos para a seção features */
 .features {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 30px;
   padding: 40px;
 }
@@ -71,9 +73,7 @@ nav ul li a {
 .features h2 {
   font-size: 24px;
   margin-bottom: 10px;
- 
 }
-
 
 .features p {
   font-size: 16px;
@@ -83,7 +83,7 @@ nav ul li a {
 /* Estilos para a seção de conteúdo adicional */
 .additional-content {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 30px;
   padding: 40px;
 }
@@ -96,7 +96,7 @@ nav ul li a {
 }
 
 .additional-content-item img {
-  width: 70%;
+  width: 50%;
   max-height: 300px;
   object-fit: cover;
   margin-bottom: 10px;
@@ -142,4 +142,3 @@ footer {
   height: 100%;
   margin: 0;
 }
-
