--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 /* MainScreen.css */
-
+*{
+  font-family: 'Poppins', sans-serif;}
 /* Estilos para o cabeçalho */
 header {
-  background-color: #f2f2f2;
+  background-color: chartreuse;
   padding: 20px;
+  
 }
 
 body {
@@ -18,17 +20,25 @@ nav ul {
 
 nav ul li {
   display: inline;
+  justify-content: space-between;
   margin-right: 10px;
+  color: black;
+  font-weight: bolder;
+  font-size: large;
+
 }
 
 nav ul li a {
-  text-decoration: none;
+  text-decoration: solid;
+  color: black;
 }
-
+.nome{
+  color: chartreuse;
+}
 /* Estilos para a seção hero */
 
 .hero {
-  background-color: purple;
+  background-color: black;
   color: #fff;
   padding: 40px;
   text-align: center;
@@ -45,16 +55,21 @@ nav ul li a {
 }
 
 .btn-primary {
-  background-color: #007bff;
-  color: #fff;
+  background-color:chartreuse;
+  color: black;
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
-  font-size: 16px;
+  font-size: 19px;
+  font-weight: bold;
+  cursor: pointer;;
 }
 
 .caixa {
   max-width: 500px;
+  background-color: #f9f9f9;
+  padding: 20px;
+  font-weight: bold;
 }
 
 /* Estilos para a seção features */
